--- a/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
@@ -61,7 +61,7 @@ Ainsi, \eqref{eq:dem_gauss1} nous amène à~: $ \lim_{x\to +\infty} k^2(x) = \fr
 = \frac{1}{\sqrt{\pi}} \int\limits_{-\infty}^{+\infty} e^{-\left(\frac{u-c}{\sigma \sqrt{2}}\right)^2} \frac{\du}{\sigma\sqrt{2}} =\frac{1}{\sqrt{\pi}} \int\limits_{-\infty}^{+\infty} e^{-x^2} \dx = 1.
 \end{equation*}
 \end{proof}
-\todo{ref autre preuve}
+%%\todo{ref autre preuve}
 
 
 \section{Comment s'intersectent deux gaussiennes ?}
