--- a/manuscrit_G_LEFEBVRE/conclusion.tex
+++ b/manuscrit_G_LEFEBVRE/conclusion.tex
@@ -41,7 +41,7 @@ Les perspectives sont donc multiples.
 Pour construire la condition initiale de manière cohérente, deux pistes sont à explorer. La première consiste à récupérer des données d'imagerie fonctionnelle (IRM ou TEP-scan), ce qui permettrait d'avoir de l'information sur la vascularisation. La seconde piste est d'étudier le modèle adjoint, pour mieux cerner l'impact du choix de la condition initiale et en améliorer la construction.  
 Notons que cette étude pourrait également corriger le caractère non prédictif du modèle. 
 
-Dans le cas de figure où l'on aurait des données sur une large cohorte de patients, des paramètres statistiques pourraient venir enrichir le présent modèle par le biais notamment de machine learning.
+Dans le cas de figure où nous aurions des données sur une large cohorte de patients, des paramètres statistiques pourraient venir enrichir le présent modèle par le biais notamment de machine learning.
 
 Enfin, un nouveau modèle dans lequel l'\hetero serait une variable à part entière pourrait également être construit et pourrait éventuellement permettre de réduire le nombre d'inconnues sur lesquelles nous n'avons pas de données.
 
