--- a/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
+++ b/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
@@ -22,13 +22,13 @@ ne permet d'en déceler leur proportions dans chaque voxel du scanner. La lien e
 \begin{equation}\label{eq:nvx_gris}
 \tau_N N + \tau_P P + \tau_S S,
 \end{equation}
-où les paramètres $\tau_N, \tau_P$ et $\tau_S$ sont les niveaux de gris que l'on associe aux populations $N,P$ et $S$. N'ayant que peut d'indication sur la nature de ces paramètres, nous proposons ici de les optimiser de sorte à ce que les images de synthèse se rapprochent le plus possible des images scanners. 
+où les paramètres $\tau_N, \tau_P$ et $\tau_S$ sont les niveaux de gris que nous associons aux populations $N,P$ et $S$. N'ayant que peu d'indications sur la nature de ces paramètres, nous proposons ici de les optimiser de sorte à ce que les images de synthèse se rapprochent le plus possible des images scanners. 
 
 
 
 \section{Présentation de l'approche}
-Pour un patient donné, on considère~$n$ instants auxquels on possède des images scanners (aux temps~$t_i, i\in \{ 1,...,n \}$).% , non nécessairement successifs). 
-Sur ces~$n$ images, on propose d'optimiser les coefficients (niveaux de gris) de l'interpolation~$\tau_N N + \tau_P P + \tau_S S$ où~$N, P$ et~$S$ sont les populations définies dans le modèle présenté précédemment. Sur l'ensemble de ces images, on fait correspondre le niveau de gris moyen des images numériques à celui des scanners, ce qui s'écrit~:
+Pour un patient donné, nous considérons~$n$ instants auxquels nous possédons  des images scanners (aux temps~$t_i, i\in \{ 1,...,n \}$).% , non nécessairement successifs). 
+Sur ces~$n$ images, nous proposons d'optimiser les coefficients (niveaux de gris) de l'interpolation~$\tau_N N + \tau_P P + \tau_S S$ où~$N, P$ et~$S$ sont les populations définies dans le modèle présenté précédemment. Sur l'ensemble de ces images, nous faisons correspondre le niveau de gris moyen des images numériques à celui des scanners, ce qui s'écrit~:
 \begin{equation}
 \label{eq:optim_grey_integ_aire}
 \begin{aligned}
@@ -41,7 +41,7 @@ où : \begin{myitemize}
 \item $Z_1(t_i)$ est la zone correspondant à la tumeur dans les simulations numériques au temps~$t_i$. Elle est définie par un seuillage sur~$S$.
 %%\todo[noline]{specifier le seuillage ?}
 \item $Z_2(t_i)$ est la zone tumorale sur le scanner réalisé au temps~$t_i$. Cette zone a été définie par contourage manuel à l'aide du logiciel OsiriX (\cf contourage des tumeurs en Annexe~\ref{chap:anx_img_complement} pages~\pageref{fig:contourageNber} et~\pageref{fig:contourageChen}).
-\item $z_0$ est la coupe que l'on choisit d'étudier dans les scanners. Cette coupe est approximativement la même au cours du temps de sorte à suivre l'évolution d'une même section du foie. 
+\item $z_0$ est la coupe que nous avons choisi d'étudier dans les scanners. Cette coupe est approximativement la même au cours du temps de sorte à suivre l'évolution d'une même section du foie. 
 \item $s(t_i,x,z_0)$ est la valeur du niveau de gris du pixel en position~$x$ sur la coupe~$z_0$ du scanner effectué au temps~$t_i$.
 \end{myitemize}
 En utilisant la discrétisation, aussi bien sur les simulations numériques que sur les scanners, on obtient :
@@ -58,7 +58,7 @@ A\tau=B,
 \end{equation}
 avec~$\tau= \trans(\tau_N,\tau_P,\tau_S)$, $A$ matrice de taille~$n\times 3$ et~$B$ vecteur colonne de taille~$n$.
 
-Pour ne pas se limiter au cas~$n=3$ qui clôt le système, on le résout par la minimisation suivante :
+Pour ne pas se limiter au cas~$n=3$ qui clôt le système, nous le résolvons par la minimisation suivante :
 \begin{equation}\label{eq:min_optim_grey}
 \min_{\tau} J(\tau) \ \textrm{ avec } \ J(\tau)= \dfrac{\| A\tau - B \|^2_{\ell^2}}{\|B\|^2_{\ell^2}} + \mathcal{P}(\tau),
 \end{equation}
@@ -246,7 +246,7 @@ La résolution de l'équation~\eqref{eq:min_optim_grey} fournit le~$\tau$ optima
 \end{myitemize}
 
 %%\todo[noline]{Presenter les algo}
-Dans tous les cas, on ne considérera pas le premier scanner (numéro~0) car la condition initiale du modèle EDP (donnée par les équations~\eqref{eq:CI_forme} et~\eqref{eq:CI} page~\pageref{eq:CI_forme}) n'est pas prise de sorte à respecter la répartition des niveaux de gris du scanner. Evitons donc d'inclure dans l'optimisation une erreur de base qui serait incompressible. On regardera des situations avec seulement 2 images (problème sous-déterminé) ou 3 images (problème fermé) ou plus (problème sur-déterminé).
+Dans tous les cas, nous ne considérerons pas le premier scanner (numéro~0) car la condition initiale du modèle EDP (donnée par les équations~\eqref{eq:CI_forme} et~\eqref{eq:CI} page~\pageref{eq:CI_forme}) n'est pas prise de sorte à respecter la répartition des niveaux de gris du scanner. Evitons donc d'inclure dans l'optimisation une erreur de base qui serait incompressible. Nous regarderons des situations avec seulement 2 images (problème sous-déterminé) ou 3 images (problème fermé) ou plus (problème sur-déterminé).
 
 En ce qui concerne les algorithmes d'optimisations utilisés, nous en choisirons quatre~:
 \begin{myitemize}
@@ -571,7 +571,7 @@ Pour les configurations avec plus d'images, un examen des conditionnements des s
 %Pour les configurations contenant l'image n°11, on peut aussi avancer que le modèle EDP n'est pas proche de la réalité en terme de volume tumoral (\cf Figure~\ref{fig:fit_area_henbert}, page~\pageref{fig:fit_area_henbert}). Bien qu'ici les niveaux de gris soit moyennés, il y a certainement des erreurs qui se reportent sur nos systèmes.
 
 \section{Conclusion}
-Des cas mal conditionnés ont été identifiés. Après élimination de ceux-ci, on considère les optima fournis par les cas biens conditionnés restants. Les optima fournis sont relativement proches les uns des autres même en faisant varier la méthode d'optimisation ou bien les images considérées comme en atteste la Table~\ref{tab:optim2gris}. Dans la suite de ce manuscrit, on fixera alors les niveaux de gris~$\tau_N=25$, $\tau_P=143$ et~$\tau_S=197$ qui sont les niveaux de gris moyens identifiés comme optimaux. 
+Des cas mal conditionnés ont été identifiés. Après élimination de ceux-ci, on considère les optima fournis par les cas biens conditionnés restants. Les optima fournis sont relativement proches les uns des autres même en faisant varier la méthode d'optimisation ou bien les images considérées comme en atteste la Table~\ref{tab:optim2gris}. Dans la suite de ce manuscrit, nous fixerons alors les niveaux de gris~$\tau_N=25$, $\tau_P=143$ et~$\tau_S=197$ qui sont les niveaux de gris moyens identifiés comme optimaux. 
 
 %L'algorithme basé sur la méthode des moindres carrés semble plus robuste que les autres méthodes examinées. Malgré tout, il peut également fournir des résultats biaisés dans le cas de systèmes mal conditionnés. Il est donc important d'examiner le conditionnement -- ou du moins le conditionnement des sous-systèmes carrés -- pour donner de la crédibilité (ou non) aux optima fournis.
 %
