--- a/manuscrit_G_LEFEBVRE/chap_trefle.tex
+++ b/manuscrit_G_LEFEBVRE/chap_trefle.tex
@@ -116,9 +116,9 @@ Afin de démontrer que le responsable du trèfle est le schéma de transport, tr
 Il sera \textit{a priori} incapable de reproduire la biologie que l'on souhaite décrire mais il aura l'avantage de toujours présenter cette forme en trèfle. 
 Ce nouveau modèle est construit à partir du modèle complet présenté au chapitre précédent, en faisant les simplifications suivantes~:
 \begin{myitemize}
-\item On enlève les parties modélisant les traitements cliniques. On peut donc ainsi considérer une seule et unique population proliférante.
-\item On supprime la partie vascularisation. Les taux de croissance $\gammapp$ et $\gammapd$ sont alors considérés constants, égaux à~1.
-\item On supprime le compartiment nécrosé, quitte à considérer que la nécrose  est instantanément éliminée.
+\item Les parties modélisant les traitements cliniques sont enlevées. On peut donc ainsi considérer une seule et unique population proliférante.
+\item La partie vascularisation est supprimée. Les taux de croissance $\gammapp$ et $\gammapd$ sont alors considérés constants, égaux à~1.
+\item Le compartiment nécrosé est également supprimé, quitte à considérer que la nécrose est instantanément éliminée.
 \end{myitemize}
 %Le modèle complet en est alors réduit à~:
 %\begin{equation}
@@ -135,8 +135,8 @@ Le modèle réduit obtenu est alors le suivant~:
 \end{equation}
 %Pour pouvoir incriminer le schéma de transport, réalisons une dernière simplification~: donnons nous une vitesse. Ainsi seule l'équation~\eqref{eq:mod_reduit_test_transp} ci-dessus suffit. 
 %%La 
-où la vitesse~$\vit$ est \emph{choisie} de sorte à reproduire au mieux la vitesse du système complet. Le champ est d'abord dilatant (pour reproduire la croissance lors de la rechute au premier traitement) puis contractant (lorsque le second traitement agit). La transition entre les deux comportements est une phase dans laquelle on a un mélange des deux comportements. 
-La Figure~\ref{fig:vx_profile} présente l'un des profils de vitesse de la simulation numérique qui génère le trèfle, simulation que l'on a présentée sur la Figure~\ref{fig:trefle}. 
+où la vitesse~$\vit$ est \emph{choisie} de sorte à reproduire au mieux la vitesse du système complet. Le champ est d'abord dilatant (pour reproduire la croissance lors de la rechute au premier traitement) puis contractant (lorsque le second traitement agit). La transition entre les deux comportements est une phase dans laquelle il y a un mélange des deux comportements. 
+La Figure~\ref{fig:vx_profile} présente l'un des profils de vitesse de la simulation numérique qui génère le trèfle, simulation présentée précédemment  sur la Figure~\ref{fig:trefle}. 
 Au centre de la tumeur (autour de~$x=5\;cm$), il y a un point de compression~: 
 la vitesse est centripète puisque~$v_x$ est positif à droite et négatif à gauche. 
 De plus, aux alentours de~$1.5\;cm$ du centre de la tumeur, il y a une couronne de cellules proliférantes qui induit un mouvement d'étalement~: la vitesse est centripète près du centre mais centrifuge plus loin. 
@@ -287,7 +287,7 @@ Comparée à la Figure~\ref{fig:trefle}, la conservation de l'invariance par rot
 %\paragraph{
 \subsubsection{
 Quelle est la valeur optimale pour le paramètre~$\beta$ ?} 
-Avec~$\beta=1$, on obtient un trèfle orienté dans les directions diagonales. 
+Avec~$\beta=1$, un trèfle orienté dans les directions diagonales est obtenu. 
 Avec~$\beta=0.5$ aussi. Le fait que~$\Delta r$ soit supérieur à~$\Delta x$ favorise certainement la direction diagonale au détriment des autres. 
 Pour l'équation~\eqref{eq:mod_reduit_test_transp} munie de la vitesse~\eqref{eq:vit_imposee}, la valeur optimale de~$\beta$ est de~$0.26$ (résultat fourni par une méthode de descente sur le paramètre~$\beta$, précis à la seconde décimale). 
 Cependant cette valeur du paramètre~$\beta$, bien que faisant nettement moins apparaître le trèfle, ne semble pas être optimale pour le problème complet. 
